ontol/ontol-compiler/test-cases/error/fmt/invalid_syntax.on
fmt () => () () // ERROR parse error: expected keyword, found `(`
